# projectCamel

./: .gitignore  CMakeLists.txt  PRIVACY.md  README.rst  prj.conf
.github/: copilot-instructions.md
.vscode_template/: tasks.json
bierorgl_app/: README.md  analysis_options.yaml  pubspec.yaml
bierorgl_app/lib/: main.dart  providers.dart
bierorgl_app/linux/: CMakeLists.txt
bierorgl_app/web/: index.html  manifest.json
bierorgl_app/windows/: CMakeLists.txt
boards/meppenSuedEngineering/: pilsPlatine_nrf52832.defconfig  pilsPlatine_nrf52832.dts  (+1 more)
doc/: Timerconfig.drawio
include/: bluetooth.h  fsm_core.h  state_machine.h  tm1637.h
src/: bluetooth.c  fsm_core.c  main.c  runtime.c  state_machine.c  tm1637.c
trichter-device/: CMakeLists.txt  README.rst  prj.conf
trichter-device/boards/meppenSuedEngineering/: Kconfig.defconfig  Kconfig.pilsPlatine  board.yml  pilsPlatine_common.dtsi  pilsPlatine_nrf52832-pinctrl.dtsi  pilsPlatine_nrf52832.dts  pilsPlatine_nrf52832_buttonless.dts  pilsPlatine_nrf52832_buttonless.yaml
trichter-device/boards/meppenSuedEngineering/_doc/: Durchflusssensor.kicad_sch
trichter-device/conf/mcuboot/: mcuboot.conf
trichter-device/doc/: State_Dispatcher.drawio  bootloaderCompile.md
trichter-device/dts/bindings/: tc1637.yaml
trichter-device/include/: bluetooth.h  bluetooth_advertising.h  bluetooth_common.h  devicetree_devices.h  fsm_core.h  memory.h  runtime.h  state_machine.h  tm1637.h
trichter-device/src/: bluetooth.c  bluetooth_advertising.c  fsm_core.c  inputs.c  main.c  memory.c  runtime.c  state_machine.c  tm1637.c
(+76 files in other folders)
